test/klee-out-4/test000002.assert.err
Error: ASSERTION FAIL: 0
File: /home/kevin/Develop/EMT/src/cr_t.c
Line: 24
assembly.ll line: 97
Stack: 
	#000000097 in cr_t (a) at /home/kevin/Develop/EMT/src/cr_t.c:24
	#100000116 in main () at /home/kevin/Develop/EMT/src/cr_t.c:32
