test/klee-out-4/test000002.kquery
array a[4] : w32 -> w8 = symbolic
(query [(Slt 1
              N0:(ReadLSB w32 0 a))
         (Eq false
             (Sle 2 (SDiv w32 N0 2)))]
        false)
